Fixed the feature cards spacing; made landing page responsive

--- a/style.css
+++ b/style.css
@@ -19,6 +19,35 @@
     max-width: 50px;
 }
 
+#feature {
+    width: 190px;
+    height: 240px;
+    border-radius: 18px;
+    border: 1.3px solid #F77F00;
+    background-color: #F8F7F1;
+}
+
+#feature:hover{
+    width: 190px;
+    height: 240px;
+    border-radius: 18px;
+    border: 1.3px solid #0C2E3D;
+    background-color: #87B547;
+    color: #FDFDFD;
+}
+
+#feature img:last-child {
+    display: none;
+}
+
+#feature:hover img:last-child {
+    display: block;  
+}
+
+#feature:hover img:first-child {
+    display: none;  
+}
+
 .backtotop-img img {
     padding-left: 8px;
     height: 12px;
@@ -35,35 +64,29 @@
 .h1s {
     font-size: 60px;
     font-family: 'Archivo Black', sans-serif;
-    color: #0C2E3D;
     line-height: 68px;
 }
 
 .h2s {
     font-size: 40px;
     font-family: 'Archivo Black', sans-serif;
-    color: #0C2E3D;
 }
 
 .h3s {
     font-size: 23px;
     font-family: 'Ubuntu', sans-serif;
-    color: #0C2E3D;
 }
 
 .h4s {
     font-family: 'Fredoka One', cursive;
-    color: #FDFDFD;
 }
 
 .h5s {
     font-family: 'Ubuntu', sans-serif;
-    color: #0C2E3D;
 }
 
 .ps {
     font-family: 'Ubuntu', sans-serif;
-    color: #0C2E3D;
 }
 
 .as {
